src/App.css
@font-face {
  font-family: "HindRegular";
  src: local("HindRegular"), url("./fonts/Hind-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "HindSemiBold";
  src: local("HindSemiBold"),
    url("./fonts/Hind-SemiBold.ttf") format("truetype");
}

.root {
  position: relative;
  height: 100vh;
  min-width: 350px;
  min-height: 500px;
  max-width: 600px;
  margin-left: auto;
  margin-right: auto;

  background: white;
  font-family: "HindRegular", sans-serif;
  font-style: normal;
}

.loader {
  border: 5px solid transparent;
  border-top: 5px solid white;
  border-left: 5px solid white;
  border-radius: 50%;
  width: 15px;
  height: 15px;
  animation: spin 2s linear infinite;
}
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.signin {
  display: flex;
  flex-direction: column;
  align-content: space-between;
  align-items: stretch;
  height: 100%;
  padding: 33px;
  box-sizing: border-box;
}

.ae-logo {
  align-self: center;
}

.signin h2 {
  font-family: "HindSemiBold", sans-serif;
  font-size: 35px;
  color: #491f6f;
  align-self: center;
  margin-top: 30px;
  margin-bottom: 0x;
}

.signin label {
  font-size: 12px;
  margin-top: 24px;
}

.signin input {
  font-family: "HindSemiBold", sans-serif;
  font-size: 14px;
  margin-top: 18px;
  border: none;
  border-bottom: 1px solid #768692;
}

.signin .action-row {
  display: flex;
  flex-direction: row;
  margin-top: 30px;
  flex-grow: 1;
}

.signin button#action-button {
  color: white;
  background-color: #491f6f;
  border-radius: 15px;
  width: 201px;
  height: 59px;
  font-family: "HindSemiBold", sans-serif;
  font-size: 22px;
  margin: auto;
  filter: drop-shadow(0 0 200px #491f6f);
  display: flex;
  align-items: center;
  justify-content: center;
}

.signin button#action-button:disabled {
  background-color: grey;
}

.directory header,
.storage-area-group header,
.storage-area header,
.container-details header,
.missing-items-list header {
  background-color: #491f6f;
  color: white;
  min-height: 100px;
}

.directory header h1,
.storage-area-group header h1,
.storage-area header h1,
.container-details header h1,
.missing-items-list header h1 {
  font-family: "HindSemiBold", sans-serif;
  font-size: 22px;
  line-height: 130%;

  text-align: center;
  padding-top: 26px;
  padding-bottom: 26px;
  padding-left: 92px;
  padding-right: 92px;
  margin: 0;
}

.container-details header h1 {
  font-size: 16px;
}

.container-details header button.full {
  position: absolute;
  right: 26px;
  top: 26px;

  padding: 0;
  width: 48px;
  height: 48px;

  font-family: "HindSemiBold", sans-serif;
  font-size: 14px;
  line-height: 14px;

  background-color: white;
  color: #491f6f;
  border: 1px solid rgba(255, 255, 255, 0.2);

  border-radius: 50%;
}

.container-details .item {
  display: flex;
}

.container-details,
.directory,
.storage-area-group,
.storage-area,
.missing-items-list {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.directory main,
.storage-area-group main,
.storage-area main,
.container-details main,
.missing-items-list main {
  flex: 1;
  position: relative;
  margin-bottom: 59px;
}

.container-details main {
  margin-bottom: 77px;
}

.container-details.with-location main {
  margin-bottom: 131px;
}

.missing-items-list main {
  flex: 1;
  position: relative;
}

.directory main .scroll,
.storage-area-group main .scroll,
.storage-area main .scroll,
.container-details main .scroll,
.missing-items-list main .scroll {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  overflow-x: hidden;
  overflow-y: auto;
  padding-top: 17px;
}

.directory main .single-storage-area,
.storage-area-group main .single-storage-area,
.missing-items-list main .container {
  border: 1px solid rgba(73, 31, 111, 0.25);
  border-radius: 12px;
  margin-bottom: 17px;
  margin-left: 25px;
  margin-right: 25px;
  display: flex;
  align-items: center;
  padding: 0;
  position: relative;
}

.container-details main .item {
  border: 1px solid rgba(73, 31, 111, 0.25);
  border-radius: 12px;
  margin-bottom: 17px;
  margin-left: 25px;
  margin-right: 25px;
  flex-direction: column;
  padding-left: 14px;
  padding-right: 14px;
  padding-top: 18px;
  padding-bottom: 6px;
  position: relative;
}

.directory main .single-storage-area,
.storage-area-group main .single-storage-area {
  min-height: 70px;
  cursor: pointer;
  text-decoration: none;
  color: black;
}

.missing-items-list main .container {
  flex-direction: column;
  padding: 16px;
  align-items: stretch;
}

.missing-items-list main .container h2 {
  font-size: 16px;
  line-height: 130%;
  margin-top: 0;
  margin-bottom: 5px;
}

.missing-items-list main .container .checker {
  border-bottom: black 1px solid;
  margin-bottom: 15px;
}

.missing-items-list main .container .item {
  padding-left: 20px;
  text-indent: -20px;
}

.directory main .single-storage-area svg,
.storage-area-group main .single-storage-area svg {
  position: absolute;
  width: 20px;
  height: 20px;
  left: 27px;
  top: 23px;
  color: #491f6f;
}

.directory main .single-storage-area .display-name,
.storage-area-group main .single-storage-area .display-name {
  font-size: 14px;
  line-height: 130%;
  padding-left: 74px;
  padding-right: 14px;
  padding-top: 18px;
  padding-bottom: 18px;
}

.container-details main .item .display-name {
  font-size: 14px;
  line-height: 130%;
}

.container-details main .item .controls {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.container-details main .item .quantity {
  flex-grow: 1;
  text-align: center;
  font-size: 28px;
  line-height: 130%;
  color: #491f6f;
}

.container-details main .item .quantity .actual-quantity-bad {
  color: #768692;
}
/* ... */

